--- a/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
@@ -44,3 +44,78 @@ import_finance_file_required_fields:
    store_credit: 4321.0000
    reward_points: 1234
 
+csv_new_master_5622:
+    email: %noValue%
+    _website: base
+    _store: admin
+    created_at: %noValue%
+    created_in: Admin
+    dob: 22.01.1986 0:00
+    firstname: Thomas
+    gender: Male
+    group_id: 1
+    lastname: Moore
+    middlename: D.
+    password: %noValue%
+    prefix: Mr.
+    suffix: Jr.
+    taxvat: 483-31-8400
+    reward_update_notification: 1
+    reward_warning_notification: 1
+
+csv_existing_master_5622:
+    email: %noValue%
+    _website: base
+    _store: admin
+    created_at: %noValue%
+    created_in: Admin
+    dob: 21.04.1963 0:00
+    firstname: William
+    gender: Female
+    group_id: 1
+    lastname: Totten
+    middlename: E.
+    password: %noValue%
+    prefix: Mr.
+    suffix: Jr.
+    taxvat: 483-31-8400
+    reward_update_notification: 1
+    reward_warning_notification: 1
+
+csv_valid_customer1_5635:
+    email: %noValue%
+    _website: base
+    _store: admin
+    created_at: %noValue%
+    created_in: Admin
+    dob: 06.05.1939 0:00
+    firstname: Aaron
+    gender: Male
+    group_id: 1
+    lastname: Wilhite
+    middlename: C.
+    password: %noValue%
+    prefix: Mr.
+    suffix: %noValue%
+    taxvat: 238-77-5918
+    reward_update_notification: 1
+    reward_warning_notification: 1
+
+csv_valid_customer2_5635:
+    email: %noValue%
+    _website: base
+    _store: admin
+    created_at: %noValue%
+    created_in: Admin
+    dob: 25.05.1946 0:00
+    firstname: Ernie
+    gender: Male
+    group_id: 1
+    lastname: Wannamaker
+    middlename: O.
+    password: %noValue%
+    prefix: Mr.
+    suffix: %noValue%
+    taxvat: 468-64-9568
+    reward_update_notification: 1
+    reward_warning_notification: 1
