--- a/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
@@ -119,3 +119,22 @@ csv_valid_customer2_5635:
     taxvat: 468-64-9568
     reward_update_notification: 1
     reward_warning_notification: 1
+
+csv_invalid_customer1_5635:
+    email: %noValue%
+    _website: invalid
+    _store: admin
+    created_at: %noValue%
+    created_in: Admin
+    dob: 15.08.1957 0:00
+    firstname: William
+    gender: Male
+    group_id: 1
+    lastname: Guin
+    middlename: M.
+    password: %noValue%
+    prefix: Mr.
+    suffix: %noValue%
+    taxvat: 254-25-6306
+    reward_update_notification: 1
+    reward_warning_notification: 1
