--- a/fixture/default/core/Mage/Product/uimap/admin/Product.yml
+++ b/fixture/default/core/Mage/Product/uimap/admin/Product.yml
@@ -304,6 +304,8 @@ new_product:
                             -
                                 select_category:
                                     xpath: //div[contains(div/div/h4,'Product Categories')]
+                                    checkboxes:
+                                        category_by_id: //div[*/@id='%categoryId%']/input
                                     links:
                                         select_category_root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
                                         select_category_sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
@@ -532,6 +534,9 @@ new_product:
                                     links:
                                         downloadable_sample: //*[@id='dt-samples']/a
                                         downloadable_link: //*[@id='dt-links']/a
+                                    pageelements:
+                                        opened_downloadable_sample: //*[@id='dt-samples'][normalize-space(@class)='open']
+                                        opened_downloadable_link: //*[@id='dt-links'][normalize-space(@class)='open']
                             -
                                 downloadable_sample:
                                     xpath: //*[@id='dd-samples']/div
@@ -546,6 +551,8 @@ new_product:
                                     radiobuttons:
                                         downloadable_sample_row_url_radiobutton: //input[@id='downloadable_sample_%rowId%_url_type']
                                         downloadable_sample_row_file_radiobutton: //input[@id='downloadable_sample_%rowId%_file_type']
+                                    pageelements:
+                                        added_downloadable_sample: //*[@id='sample_items_body']/tr
                             -
                                 downloadable_link:
                                     xpath: //*[@id='dd-links']/div
@@ -568,6 +575,8 @@ new_product:
                                     radiobuttons:
                                         downloadable_link_row_sample_url_radiobutton: //input[@id='downloadable_link_%rowId%_sample_url_type']
                                         downloadable_link_row_url_radiobutton: //input[@id='downloadable_link_%rowId%_url_type']
+                                    pageelements:
+                                        added_downloadable_link: //*[@id='link_items_body']/tr
         buttons:
             back: //button[span='Back']
             reset: //button[span='Reset']
