--- a/fixture/default/core/Mage/CmsWidget/uimap/admin/CmsWidget.yml
+++ b/fixture/default/core/Mage/CmsWidget/uimap/admin/CmsWidget.yml
@@ -111,24 +111,24 @@ add_widget_options:
                                 layout_updates_body:
                                     xpath: //div[@class='entry-edit-head' and h4='Layout Updates']/following-sibling::div[@class='fieldset']
                                     dropdowns:
-                                        select_display_on: //select[@name='widget_instance[%index%][page_group]']
-                                        select_block_reference: //select[@name='widget_instance[%index%][%layout%][block]']
-                                        select_template: //select[@name='widget_instance[%index%][%layout%][template]']
-                                        select_page: //select[@name='widget_instance[%index%][%layout%][layout_handle]']
-                                        page: //div[@id='%layout%_%index%']//input[@name='page']
-                                        filter_any: //div[@id='%layout%_%index%']//select[@name='in_products']
+                                        select_display_on: //select[@name='widget_instance[%layoutIndex%][page_group]']
+                                        select_block_reference: //select[@name='widget_instance[%layoutIndex%][%layout%][block]']
+                                        select_template: //select[@name='widget_instance[%layoutIndex%][%layout%][template]']
+                                        select_page: //select[@name='widget_instance[%layoutIndex%][%layout%][layout_handle]']
+                                        page: //div[@id='%layout%_%layoutIndex%']//input[@name='page']
+                                        filter_any: //div[@id='%layout%_%layoutIndex%']//select[@name='in_products']
                                     fields:
-                                        specific_category: //input[@name='widget_instance[%index%][%layout%][entities]']
-                                        filter_id: //div[@id='%layout%_%index%']//input[@name='entity_id']
-                                        filter_sku: //div[@id='%layout%_%index%']//input[@name='chooser_sku']
-                                        filter_product_name: //div[@id='%layout%_%index%']//input[@name='chooser_name']
+                                        specific_category: //input[@name='widget_instance[%layoutIndex%][%layout%][entities]']
+                                        filter_id: //div[@id='%layout%_%layoutIndex%']//input[@name='entity_id']
+                                        filter_sku: //div[@id='%layout%_%layoutIndex%']//input[@name='chooser_sku']
+                                        filter_product_name: //div[@id='%layout%_%layoutIndex%']//input[@name='chooser_name']
                                     radiobuttons:
-                                        all_categories_products_radio: //input[@name='widget_instance[%index%][%layout%][for]' and @value='all']
-                                        specific_categories_products_radio: //input[@name='widget_instance[%index%][%layout%][for]' and @value='specific']
+                                        all_categories_products_radio: //input[@name='widget_instance[%layoutIndex%][%layout%][for]' and @value='all']
+                                        specific_categories_products_radio: //input[@name='widget_instance[%layoutIndex%][%layout%][for]' and @value='specific']
                                     links:
-                                        open_chooser: //div[@id='%layout%_ids_%index%']//a[@title='Open Chooser']
-                                        apply: //div[@id='%layout%_ids_%index%']//a[@title='Apply']
-#                                        select_category_anchor: //div[@id='page_group_container_%index%']//a[span='%categoryName%']
+                                        open_chooser: //div[@id='%layout%_ids_%layoutIndex%']//a[@title='Open Chooser']
+                                        apply: //div[@id='%layout%_ids_%layoutIndex%']//a[@title='Apply']
+#                                        select_category_anchor: //div[@id='page_group_container_%layoutIndex%']//a[span='%categoryName%']
                                         layout_updates_body_root_category: %widgetParam%//ul/div/li[contains(div/a/span,'%rootName%')]
                                         layout_updates_body_sub_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
                                         layout_updates_body_expand_category: %widgetParam%//*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
@@ -139,10 +139,10 @@ add_widget_options:
 #                                    checkboxes:
 #                                        select_category_non_anchor: //div[@id='page_group_container_%index%']//div[./a[span='%categoryName%']]//input[@type='checkbox']
                                     buttons:
-                                        remove_layout_update: //div[@id='page_group_container_%index%']//button[span='Remove Layout Update']
+                                        remove_layout_update: //div[@id='page_group_container_%layoutIndex%']//button[span='Remove Layout Update']
                             -
                                 layout_products_fieldset:
-                                    xpath: //div[@id='%layout%_ids_%index%']
+                                    xpath: //div[@id='%layout%_ids_%layoutIndex%']
                                     buttons:
                                         reset_filter: //button[span='Reset Filter']
                                         search: //button[span='Search']
