--- a/dev/tests/functional/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
@@ -58,7 +58,7 @@ generic_customer_attribute:
    input_type: Text Field
    attribute_code: attr_ie_%randomize%
    default_text_field_value: attr_default_%randomize%
-   values_required: Yes
+   values_required: No
    input_validation: None
    min_text_length: 1
    max_text_length: 255
@@ -188,7 +188,7 @@ generic_customer_address_attribute:
    input_validation: None
    min_text_length: 1
    max_text_length: 255
-   values_required: Yes
+   values_required: No
    input_filter: None
    is_used_for_customer_segment: No
    is_visible: Yes
