--- a/dev/tests/functional/fixture/default/core/Mage/SystemConfiguration/data/PaymentMethod.yml
+++ b/dev/tests/functional/fixture/default/core/Mage/SystemConfiguration/data/PaymentMethod.yml
@@ -266,7 +266,7 @@ authorizenet_without_3Dsecure:
             an_title: Credit Card (Authorize.net)
             an_api_login_id: 36sCtGS8w
             an_payment_action: Authorize Only
-            an_transaction_key: 3rWD5LvhB367rY7v
+            an_transaction_key: 8G9dcr8985GNNS8t
             an_new_order_status: %noValue%
             an_test_mode: No
             an_gateway_url: https://test.authorize.net/gateway/transact.dll
@@ -294,7 +294,7 @@ authorizenet_with_3Dsecure:
             an_title: Credit Card (Authorize.net)
             an_api_login_id: 36sCtGS8w
             an_payment_action: Authorize Only
-            an_transaction_key: 3rWD5LvhB367rY7v
+            an_transaction_key: 8G9dcr8985GNNS8t
             an_new_order_status: %noValue%
             an_test_mode: No
             an_gateway_url: https://test.authorize.net/gateway/transact.dll
