--- a/fixture/community2/core/Mage/Shipment/uimap/admin/Shipment.yml
+++ b/fixture/community2/core/Mage/Shipment/uimap/admin/Shipment.yml
@@ -1,3 +1,4 @@
+#
 # Magento
 #
 # NOTICE OF LICENSE
@@ -24,17 +25,9 @@
 # @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
 #
 ---
-admin_header:
-    uimap:
-        form:
-            fieldsets:
-                -
-                    global_header:
-                        fields:
-                            global_record_search: //*[@id='global_search']
-                -
-                    general_elements:
-                        pageelements:
-                            navigation_menu_items: //ul[@id='nav']/li
-                            general_menu_xpath: //*[@id='nav']/li[contains(@class, 'active')]//a[contains(@href, '%mcaXpath%')]
-                            active_menu_element: //*[@id='nav']/li[contains(@class, 'active')]
+#Manage Sales Orders and related pages
+
+# Sales Shipments page
+manage_sales_shipments:
+    mca: sales_shipment/
+    click_xpath: //ul[@id='nav']//a[contains(@href, 'sales_shipment/')]
