--- a/fixture/enterprise2/core/Mage/Customer/uimap/admin/Customers.yml
+++ b/fixture/enterprise2/core/Mage/Customer/uimap/admin/Customers.yml
@@ -57,3 +57,33 @@ edit_customer:
                                         comment: //input[@id='reward_comment']
         buttons:
             manage_shopping_cart: //button[span='Manage Shopping Cart']
+
+#Customer Segments page
+manage_customer_segments:
+    mca: customersegment/
+    click_xpath: //ul[@id='nav']//a[contains(@href, 'customersegment/')]
+    title: Customer Segments / Customers / Magento Admin
+
+#Manage Invitations page
+manage_invitations:
+    mca: invitation/
+    click_xpath: //ul[@id='nav']//a[contains(@href, 'invitation/')]
+    title: Invitations / Customers / Magento Admin
+
+#Manage Gift Registry Types page
+manage_gift_registry:
+    mca: giftregistry/
+    click_xpath: //ul[@id='nav']//a[contains(@href, 'giftregistry/')]
+    title: Manage Gift Registry Types / Customers / Magento Admin
+
+#Manage Gift Card Accounts page
+manage_gift_card_account:
+    mca: giftcardaccount/
+    click_xpath: //ul[@id='nav']//a[contains(@href, 'giftcardaccount/')]
+    title: Gift Card Accounts / Customers / Magento Admin
+
+#Manage Reward Exchange Rates page
+manage_reward_rates:
+    mca: reward_rate/
+    click_xpath: //ul[@id='nav']//a[contains(@href, 'reward_rate/')]
+    title: Reward Exchange Rates / Customers / Magento Admin
