--- a/dev/tests/functional/fixture/enterprise2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -71,6 +71,13 @@ system_configuration:
                                         sku_my_account_enable: //select[@name='groups[product_sku][fields][my_account_enable][value]'] 
                                     multiselects:
                                         sku_allowed_groups: //select[@name='groups[product_sku][fields][allowed_groups][value][]']
+                -
+                    customers_customer_configuration:
+                        fieldsets:
+                            -
+                                captcha:
+                                    fields:
+                                        captcha_number_of_attempts: //*[@id='customer_captcha_failed_attempts_login']
 
 system_configuration_tabs:
     uimap: *systemConfiguration
