--- a/dev/tests/integration/phpunit.xml.dist
+++ b/dev/tests/integration/phpunit.xml.dist
@@ -15,6 +15,7 @@
     <testsuites>
         <testsuite name="Magento Integration Tests">
             <directory suffix="Test.php">testsuite</directory>
+            <exclude>testsuite/integrity</exclude>
         </testsuite>
     </testsuites>
      <!-- Code coverage filters -->
