--- a/fixture/community2/core/Mage/UrlRewrite/uimap/admin/UrlRewrite.yml
+++ b/fixture/community2/core/Mage/UrlRewrite/uimap/admin/UrlRewrite.yml
@@ -71,7 +71,7 @@ add_new_urlrewrite_category:
                     category_rewrite:
                         xpath: //*[@id='page:main-container']/div/fieldset
                         links:
-                            root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
+                            root_category: //ul/div/li/div/a[contains(span,'%rootName%')]
                             sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
                             expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
             dropdowns:
